# simplextk-QuickStart

./: .gitmodules  CMakeLists.txt  README.md  SimplexQuickStart.sh  main.cpp
